######## 2016-04-12 ##########
ALTER TABLE flashsale_promotion_download_record ADD unionid VARCHAR(128) null after openid;
create index unionid_index on flashsale_promotion_download_record(unionid);
create index mobile_index on flashsale_promotion_download_record(mobile);
create index status_index on flashsale_promotion_download_record(status);
ALTER TABLE flashsale_promotion_sampleapply ADD user_unionid VARCHAR(64) null after user_openid;
create index user_openid_index on flashsale_promotion_sampleapply(user_openid);
alter table flashsale_dinghuo_inbound add column images longtext;
######## 2016-04-11 ##########
alter table flashsale_xlmm_nine_pic add column `is_pushed` bool NOT NULL;
######## 2016-04-06 #########
alter table flashsale_cushops_detail add column model int(11) default 0;
alter table suplychain_flashsale_orderlist add column is_postpay smallint default 0;
######## 2016-04-02 ########
DROP TABLE IF EXISTS `flashsale_package`;
CREATE TABLE `flashsale_package` (
  `id` varchar(100) NOT NULL,
  `ware_by` int(11) NOT NULL,
  `status` varchar(32) NOT NULL,
  `sys_status` varchar(32) NOT NULL,
  `receiver_name` varchar(25) NOT NULL,
  `receiver_state` varchar(16) NOT NULL,
  `receiver_city` varchar(16) NOT NULL,
  `receiver_district` varchar(16) NOT NULL,
  `receiver_address` varchar(128) NOT NULL,
  `receiver_zip` varchar(10) NOT NULL,
  `receiver_mobile` varchar(24) NOT NULL,
  `receiver_phone` varchar(20) NOT NULL,
  `buyer_id` bigint(20) NOT NULL,
  `user_address_id` bigint(20) DEFAULT NULL,
  `post_cost` double NOT NULL,
  `is_lgtype` tinyint(1) NOT NULL,
  `lg_aging` datetime DEFAULT NULL,
  `lg_aging_type` varchar(20) NOT NULL,
  `out_sid` varchar(64) NOT NULL,
  `logistics_company_id` bigint(20) DEFAULT NULL,
  `weight` varchar(10) NOT NULL,
  `is_qrcode` tinyint(1) NOT NULL,
  `qrcode_msg` varchar(32) NOT NULL,
  `can_review` tinyint(1) NOT NULL,
  `priority` int(11) NOT NULL,
  `operator` varchar(32) NOT NULL,
  `scanner` varchar(64) NOT NULL,