@@ -1,3 +1,5 @@
+######## 2016-04-13 ##########
+alter table flashsale_dinghuo_inbound add column orderlist_ids longtext;
 ######## 2016-04-12 ##########
 ALTER TABLE flashsale_promotion_download_record ADD unionid VARCHAR(128) null after openid;
 create index unionid_index on flashsale_promotion_download_record(unionid);
